--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
     color: #306230;
     size: 2rem;
 }
+.iconss{
+    color: rgb(5, 54, 3);
+    gap:2rem 2rem;
+}
 .header_part img{
     float: left;
     height: 60px;
