--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 }
 .data_table{
     background:#306230;
-    color: #070707;
+    color: #cfc4c4;
     padding: 10px;
     box-shadow: 1px 3px 5px #d8cccc;
     border-radius: 5px;
