--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
     background:#84e784;
     color: #1b1b1b;
     padding: 10px;
-    box-shadow: 1px 3px 5px #d8cccc;
+    box-shadow: 5px 5px 5px 5px #d8cccc;
     border-radius: 10px;
     margin: 0 auto;
 }
